@@ -2,6 +2,9 @@
 fixtures:
   repositories:
     auditd: https://github.com/simp/pupmod-simp-auditd
+    augeas_core:
+      repo: https://github.com/simp/pupmod-puppetlabs-augeas_core.git
+      puppet_version: ">= 6.0.0"
     augeasproviders_core: https://github.com/simp/augeasproviders_core
     augeasproviders_grub: https://github.com/simp/augeasproviders_grub
     simplib: https://github.com/simp/pupmod-simp-simplib
